# claude-code-wiki

./: .env.example  .gitignore  pyproject.toml  rebuild_wiki.py  wiki-graph-data.json  wiki-graph-graph.json  wiki-graph.html
src/claude_code_wiki/cli/: commands.py
src/claude_code_wiki/graph/: lsp.py  models.py  storage.py
src/claude_code_wiki/llm/: agent.py  client.py
src/claude_code_wiki/parser/: code_parser.py
src/claude_code_wiki/wiki/: generator.py
templates/: component.md.j2  index.md.j2  relationships.md.j2  sidebar.md.j2
